<resources>
    <string name="app_name">Weather</string>
    <string name="Logo_App">Погода в городе</string>
    <string name="Your_City">Укажите город</string>
    <string name="Return">Найти</string>
    <string name="Wait">Получение данных</string>
    <string name="Error">Города не существует или указан некорректно</string>
    <string name="Login">Войти</string>

    <string name="EtEmail">Введите Email</string>
    <string name="EtPassword">Введите Пароль</string>

    <string name="TitleAuth">Аунтификация</string>
    <string name="TitleReg">Регистрация</string>

    <string name="Home">На главную</string>
    <string name="Reg">Зарегестрироаться</string>
    <string name="Auth">Авторизация</string>

    <string name="Name">Введите Имя</string>
    <string name="Back">Назад</string>

</resources>