<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SecondActivity">

    <TextView
        android:id="@+id/TitleReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/ledger"
        android:text="@string/TitleReg"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/RegName"
        android:layout_width="250sp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75sp"
        android:layout_marginTop="265dp"
        android:background="@color/backgroundForInput"
        android:ems="50"
        android:fontFamily="@font/ledger"
        android:hint="@string/Name"
        android:textAlignment="center"
        android:textColorHint="@color/HintColour" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="250sp"
        android:layout_height="wrap_content"

        android:layout_marginStart="75sp"
        android:layout_marginTop="300dp"
        android:background="@color/backgroundForInput"
        android:ems="50"
        android:fontFamily="@font/ledger"
        android:hint="@string/EtEmail"
        android:textAlignment="center"
        android:textColorHint="@color/HintColour" />

    <EditText
        android:id="@+id/RegPassword"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/RegEmail"
        android:layout_marginStart="75sp"
        android:layout_marginTop="10dp"
        android:background="@color/backgroundForInput"
        android:ems="50"
        android:fontFamily="@font/ledger"
        android:hint="@string/EtPassword"
        android:textAlignment="center"
        android:textColorHint="@color/HintColour" />


    <Button
        android:id="@+id/RegHome"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ledger"
        android:hint="@string/Home" />
    <Button
        android:id="@+id/RegBack"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ledger"
        android:hint="@string/Back" />

    <Button
        android:id="@+id/RegReg"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/RegPassword"
        android:layout_marginStart="75dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ledger"
        android:hint="@string/Reg"
        android:textSize="15dp" />

</RelativeLayout>