<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/ledger"
        android:text="@string/Logo_App"
        android:layout_marginTop="100px"
        android:textColor="@color/textColor"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/user_field"
        android:layout_marginStart="250sp"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="8dp"
        android:background="@color/backgroundForInput"
        android:ems="50"
        android:fontFamily="@font/ledger"
        android:textAlignment="center"
        android:textColorHint="@color/HintColour"
        android:hint="@string/Your_City"

        />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/Main_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ledger"
            android:text="@string/Return" />
    </LinearLayout>

    <Button
        android:id="@+id/Login_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:fontFamily="@font/ledger"
        android:hint="@string/Login"
        />

    <TextView
        android:id="@+id/ResultWeather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_field"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/ledger"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ResultPhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ResultWeather"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/ledger"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/ResultTemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_layout"
        android:layout_marginBottom="0dp"
        android:fontFamily="@font/ledger"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="30sp" />


</RelativeLayout>